--- a/index.html
+++ b/index.html
@@ -10,7 +10,27 @@
     <div class="centerDiv">
         <div class="window">
             <div class="buttonsAndWindow">
-                <p>hey</p>
+                <div class="outputWindow">
+                    <p id="output">0</p>
+                </div>
+                <div class="buttonGrid">
+                    <div onclick="buttonPress(1)" class="keys" id="key1">1</div>
+                    <div onclick="buttonPress(2)" class="keys" id="key2">2</div>
+                    <div onclick="buttonPress(3)" class="keys" id="key3">3</div>
+                    <div onclick="buttonPress('multiply')" class="keys functionButtons" id="multiply">*</div>
+                    <div onclick="buttonPress(4)" class="keys" id="key4">4</div>
+                    <div onclick="buttonPress(5)" class="keys" id="key5">5</div>
+                    <div onclick="buttonPress(6)" class="keys" id="key6">6</div>
+                    <div onclick="buttonPress('divide')" class="keys functionButtons" id="divide">/</div>
+                    <div onclick="buttonPress(7)" class="keys" id="key7">7</div>
+                    <div onclick="buttonPress(8)" class="keys" id="key8">8</div>
+                    <div onclick="buttonPress(9)" class="keys" id="key9">9</div>
+                    <div onclick="buttonPress('minus')" class="keys functionButtons" id="minus">-</div>
+                    <div onclick="buttonPress(0)" class="keys" id="key0">0</div>
+                    <div onclick="buttonPress('point')" class="keys functionButtons" id="point">.</div>
+                    <div onclick="buttonPress('equals')" class="keys functionButtons" id="equals">=</div>
+                    <div onclick="buttonPress('plus')" class="keys functionButtons" id="plus">+</div>
+                </div>
             </div>
         </div>
     </div>
