Added out window limits

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class="centerDiv">
         <div class="window">
             <div class="buttonsAndWindow">
-                <div class="outputWindow">
+                <div onclick="clearOutput()" class="outputWindow">
                     <p id="output">0</p>
                 </div>
                 <div class="buttonGrid">
@@ -29,7 +29,7 @@
                     <div onclick="buttonPress('minus')" class="keys functionButtons" id="minus">-</div>
                     <div onclick="buttonPress(0)" class="keys" id="key0">0</div>
                     <div onclick="buttonPress('point')" class="keys functionButtons" id="point">.</div>
-                    <div onclick="buttonPress('equals')" class="keys functionButtons" id="equals">=</div>
+                    <div onclick="buttonPress('equals')" class="keys" id="equals">=</div>
                     <div onclick="buttonPress('plus')" class="keys functionButtons" id="plus">+</div>
                 </div>
             </div>
