--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                     <div onclick="buttonPress(9)" class="keys" id="key9">9</div>
                     <div onclick="buttonPress('minus')" class="keys functionButtons" id="minus">-</div>
                     <div onclick="buttonPress(0)" class="keys" id="key0">0</div>
-                    <div onclick="buttonPress('point')" class="keys functionButtons" id="point">.</div>
+                    <div onclick="buttonPress('deleteButton')" class="keys functionButtons" id="deleteButton">Del</div>
                     <div onclick="buttonPress('equals')" class="keys" id="equals">=</div>
                     <div onclick="buttonPress('plus')" class="keys functionButtons" id="plus">+</div>
                 </div>
