--- a/index.html
+++ b/index.html
@@ -15,19 +15,19 @@
                     <p id="output">0</p>
                 </div>
                 <div class="buttonGrid">
-                    <div onclick="buttonPress(1)" class="keys" id="key1">1</div>
-                    <div onclick="buttonPress(2)" class="keys" id="key2">2</div>
-                    <div onclick="buttonPress(3)" class="keys" id="key3">3</div>
+                    <div onclick="buttonPress(1)" class="keys">1</div>
+                    <div onclick="buttonPress(2)" class="keys">2</div>
+                    <div onclick="buttonPress(3)" class="keys">3</div>
                     <div onclick="buttonPress('multiply')" class="keys functionButtons" id="multiply">*</div>
-                    <div onclick="buttonPress(4)" class="keys" id="key4">4</div>
-                    <div onclick="buttonPress(5)" class="keys" id="key5">5</div>
-                    <div onclick="buttonPress(6)" class="keys" id="key6">6</div>
+                    <div onclick="buttonPress(4)" class="keys">4</div>
+                    <div onclick="buttonPress(5)" class="keys">5</div>
+                    <div onclick="buttonPress(6)" class="keys">6</div>
                     <div onclick="buttonPress('divide')" class="keys functionButtons" id="divide">/</div>
-                    <div onclick="buttonPress(7)" class="keys" id="key7">7</div>
-                    <div onclick="buttonPress(8)" class="keys" id="key8">8</div>
-                    <div onclick="buttonPress(9)" class="keys" id="key9">9</div>
+                    <div onclick="buttonPress(7)" class="keys">7</div>
+                    <div onclick="buttonPress(8)" class="keys">8</div>
+                    <div onclick="buttonPress(9)" class="keys">9</div>
                     <div onclick="buttonPress('minus')" class="keys functionButtons" id="minus">-</div>
-                    <div onclick="buttonPress(0)" class="keys" id="key0">0</div>
+                    <div onclick="buttonPress(0)" class="keys">0</div>
                     <div onclick="buttonPress('deleteButton')" class="keys functionButtons" id="deleteButton">Del</div>
                     <div onclick="buttonPress('equals')" class="keys" id="equals">=</div>
                     <div onclick="buttonPress('plus')" class="keys functionButtons" id="plus">+</div>
